--- a/index.html
+++ b/index.html
@@ -1,79 +1,56 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Portfólio Emmanuel</title>
+    <meta charset="UTF-8">
+    <title>Portfólio - Emmanuel Gomes</title>
     <style>
         body {
-          font-family: Arial, sans-serif;
-          margin: 0; padding: 0;
-          background-color: #f5f5f5;
-          color: #333;
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            text-align: center;
+            padding: 50px;
         }
-        header {
-          background-color: #2c3e50;
-          color: white;
-          padding: 2rem;
-          text-align: center;
+
+        img {
+            border-radius: 50%;
+            width: 200px;
+            height: 200px;
+            object-fit: cover;
+            border: 3px solid #333;
         }
-        section {
-          padding: 2rem;
-          max-width: 800px;
-          margin: auto;
+
+        h1 {
+            color: #333;
         }
-        .projeto {
-          background: white;
-          padding: 1rem;
-          margin-bottom: 1rem;
-          border-radius: 10px;
-          box-shadow: 0 0 5px rgba(0,0,0,0.1);
+
+        p {
+            color: #555;
+            font-size: 18px;
         }
-        .projeto h3 {
-          margin-top: 0;
+
+        .links a {
+            margin: 10px;
+            display: inline-block;
+            text-decoration: none;
+            color: white;
+            background-color: #0077cc;
+            padding: 10px 20px;
+            border-radius: 8px;
         }
-        footer {
-          text-align: center;
-          padding: 1rem;
-          background-color: #2c3e50;
-          color: white;
-          margin-top: 2rem;
-        }
-        a {
-          color: #2980b9;
-          text-decoration: none;
-        }
-        a:hover {
-          text-decoration: underline;
+
+        .links a:hover {
+            background-color: #005fa3;
         }
     </style>
 </head>
 <body>
-<header>
-    <h1>Portfólio de Emmanuel</h1>
-    <p>Desenvolvedor em formação | Java & Python</p>
-</header>
+<img src="fotoperfil.jpeg" alt="Foto de Emmanuel Gomes">
+<h1>Emmanuel Gomes</h1>
+<p>Desenvolvedor em formação | Python & Java | Projetos práticos em terminal e web</p>
 
-<section>
-    <h2>Meus Projetos</h2>
-
-    <div class="projeto">
-        <h3>Cadastro de Clientes (Python)</h3>
-        <p>Sistema simples em terminal para cadastrar e buscar clientes, com tratamento de erro.</p>
-        <p><a href="https://github.com/EmmanuelGomesSilva/cadastro-clientes-python" target="_blank">Ver no GitHub</a></p>
-    </div>
-
-    <div class="projeto">
-        <h3>Livro de Receitas Fit (Java)</h3>
-        <p>Projeto em Java para gerenciar receitas saudáveis, com funcionalidades de adicionar, listar, atualizar e salvar.</p>
-        <p><a href="https://github.com/EmmanuelGomesSilva/livroReceitasFit" target="_blank">Ver no GitHub</a></p>
-    </div>
-
-</section>
-
-<footer>
-    <p>Entre em contato: emmanueu@gmail.com | Whatsapp: (44) 98868-3499</p>
-    <p><a href="https://www.linkedin.com/in/emmanuel-gomes-b6670754/" target="_blank">Linkedin</a> | <a href="https://github.com/EmmanuelGomesSilva" target="_blank">GitHub</a></p>
-</footer>
+<div class="links">
+    <a href="https://github.com/EmmanuelGomesSilva" target="_blank">GitHub</a>
+    <a href="https://emmanuelgomessilva.github.io/cadastro-clientes-python" target="_blank">Projeto: Cadastro de Clientes</a>
+</div>
 </body>
 </html>
