"Atualizado com projeto Livro de Receitas Fit"

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 
 <div class="links">
     <a href="https://github.com/EmmanuelGomesSilva" target="_blank">GitHub</a>
-    <a href="https://emmanuelgomessilva.github.io/cadastro-clientes-python" target="_blank">Projeto: Cadastro de Clientes</a>
+    <a href="https://github.com/EmmanuelGomesSilva/cadastro-clientes-python" target="_blank">Projeto: Cadastro de Clientes (Python)</a>
+    <a href="https://github.com/EmmanuelGomesSilva/livroReceitasFit" target="_blank">Projeto: Livro de Receitas Fit (Java)</a>
 </div>
 </body>
 </html>
