--- a/index.html
+++ b/index.html
@@ -2,118 +2,161 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Portfólio - Emmanuel Gomes</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
-    /* Reset básico */
-    * {
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #eef2f7;
+      color: #333;
+      text-align: center;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
     }
 
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #6b73ff 0%, #000dff 100%);
-      color: #f0f0f0;
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-      align-items: center;
-      padding: 2rem 1rem;
-    }
-
-    .container {
-      background-color: rgba(0, 0, 50, 0.8);
-      border-radius: 15px;
-      max-width: 600px;
-      width: 100%;
-      padding: 2rem;
-      box-shadow: 0 8px 16px rgba(0,0,0,0.3);
-      text-align: center;
+    header {
+      padding: 50px 20px 20px;
     }
 
     img {
       border-radius: 50%;
-      width: 160px;
-      height: 160px;
+      width: 180px;
+      height: 180px;
       object-fit: cover;
-      border: 4px solid #81a1c1;
-      margin-bottom: 1.5rem;
-      transition: transform 0.3s ease;
-    }
-
-    img:hover {
-      transform: scale(1.05);
-      border-color: #a0c4ff;
+      border: 4px solid #0077cc;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
 
     h1 {
-      font-weight: 700;
-      margin-bottom: 0.5rem;
-      font-size: 2.4rem;
-      color: #a0c4ff;
-      letter-spacing: 1.2px;
+      font-size: 32px;
+      margin: 20px 0 10px;
     }
 
     p {
-      font-size: 1.1rem;
-      margin-bottom: 2rem;
-      color: #d0d4e6;
-      line-height: 1.4;
+      font-size: 18px;
+      color: #555;
+      margin-bottom: 20px;
     }
 
-    .links {
+    .links, .skills, .projects {
+      margin: 30px auto;
+      max-width: 800px;
+      padding: 0 20px;
+    }
+
+    .links a, .projects a {
+      margin: 10px;
+      display: inline-block;
+      text-decoration: none;
+      color: white;
+      background-color: #0077cc;
+      padding: 10px 20px;
+      border-radius: 8px;
+      transition: background 0.3s;
+    }
+
+    .links a:hover, .projects a:hover {
+      background-color: #005fa3;
+    }
+
+    .skills ul {
+      list-style: none;
+      padding: 0;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 1rem;
     }
 
-    .links a {
-      background: #81a1c1;
-      color: #0f172a;
-      font-weight: 600;
-      text-decoration: none;
-      padding: 0.8rem 1.6rem;
-      border-radius: 50px;
-      box-shadow: 0 4px 10px rgba(129, 161, 193, 0.4);
-      transition: background-color 0.3s ease, color 0.3s ease;
+    .skills li {
+      margin: 10px 15px;
+      font-size: 18px;
     }
 
-    .links a:hover {
-      background-color: #a0c4ff;
-      color: #000dff;
-      box-shadow: 0 6px 14px rgba(160, 196, 255, 0.6);
+    .skills i {
+      margin-right: 8px;
     }
 
-    @media (max-width: 480px) {
-      h1 {
-        font-size: 1.8rem;
-      }
+    h2 {
+      font-size: 26px;
+      margin-bottom: 10px;
+      color: #0077cc;
+    }
+
+    .projects div {
+      margin-bottom: 20px;
+    }
+
+    footer {
+      margin: 40px 0;
+      font-size: 14px;
+      color: #888;
+    }
+
+    @media (max-width: 600px) {
       img {
-        width: 130px;
-        height: 130px;
+        width: 140px;
+        height: 140px;
       }
-      .links a {
-        padding: 0.6rem 1.2rem;
-        font-size: 0.9rem;
+
+      h1 {
+        font-size: 26px;
+      }
+
+      .skills li {
+        font-size: 16px;
       }
     }
   </style>
 </head>
 <body>
-  <div class="container">
+
+  <header>
     <img src="fotoperfil.jpeg" alt="Foto de Emmanuel Gomes" />
     <h1>Emmanuel Gomes</h1>
-    <p>Desenvolvedor em formação | Python & Java | Projetos práticos em terminal e web</p>
+    <p>👨‍💻 Desenvolvedor em formação | Python 🐍 & Java ☕ | Projetos práticos em terminal e web</p>
+  </header>
 
-    <div class="links">
-      <a href="https://github.com/EmmanuelGomesSilva" target="_blank" rel="noopener noreferrer">GitHub</a>
-      <a href="https://github.com/EmmanuelGomesSilva/cadastro-clientes-python" target="_blank" rel="noopener noreferrer">Cadastro Clientes (Python)</a>
-      <a href="https://github.com/EmmanuelGomesSilva/livroReceitasFit" target="_blank" rel="noopener noreferrer">Livro de Receitas (Java)</a>
-    </div>
+  <div class="links">
+    <a href="https://github.com/EmmanuelGomesSilva" target="_blank">
+      <i class="fab fa-github"></i> GitHub
+    </a>
   </div>
+
+  <section class="skills">
+    <h2>⚙️ Habilidades</h2>
+    <ul>
+      <li><i class="fab fa-python"></i> Python</li>
+      <li><i class="fas fa-coffee"></i> Java (OOP e JDBC)</li>
+      <li><i class="fas fa-terminal"></i> Programas de linha de comando</li>
+      <li><i class="fab fa-git-alt"></i> Git & GitHub</li>
+      <li><i class="fab fa-html5"></i> HTML/CSS Básico</li>
+    </ul>
+  </section>
+
+  <section class="projects">
+    <h2>📂 Projetos</h2>
+
+    <div>
+      <strong>Cadastro de Clientes (Python)</strong><br />
+      <a href="https://emmanuelgomessilva.github.io/cadastro-clientes-python" target="_blank">
+        Ver Online
+      </a>
+      <a href="https://github.com/EmmanuelGomesSilva/cadastro-clientes-python" target="_blank">
+        Código no GitHub
+      </a>
+    </div>
+
+    <div>
+      <strong>Livro de Receitas Fit (Java)</strong><br />
+      <a href="https://github.com/EmmanuelGomesSilva/livroReceitasFit" target="_blank">
+        Código no GitHub
+      </a>
+    </div>
+  </section>
+
+  <footer>
+    © 2025 Emmanuel Gomes. Todos os direitos reservados.
+  </footer>
 </body>
 </html>
-
