--- a/index.html
+++ b/index.html
@@ -150,6 +150,12 @@
         Código no GitHub
       </a>
     </div>
+    <div>
+      <strong>Agenda (Java)</strong><br />
+      <a href="https://github.com/EmmanuelGomesSilva/AgendaJava.git" target="_blank">
+        Código no GitHub
+      </a>
+    </div>
   </section>
 
   <footer>
