--- a/index.html
+++ b/index.html
@@ -156,6 +156,12 @@
         Código no GitHub
       </a>
     </div>
+     <div>
+      <strong>Caixa eletrônico console (Java)</strong><br />
+      <a href="https://github.com/EmmanuelGomesSilva/caixa_eletronico_console" target="_blank">
+        Código no GitHub
+      </a>
+    </div>
   </section>
 
   <footer>
