--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
      </a>
     </div>
      <div>
-      <strong>Caixa eletrônico console (Java)</strong><br />
+      <strong>Cadastro Tarefa (Java)</strong><br />
       <a href="https://github.com/EmmanuelGomesSilva/Cadastro_tarefas" target="_blank">
         Código no GitHub
       </a>
